<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.demoscroll.MainActivity"
    android:orientation="vertical">

    // 使用修改layoutParam来实现滑动
    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_parameter_scroll"
        android:onClick="onClick"
        />

    // 使用属性动画来实现滑动。属性动画：改变对象的属性，比如位置来实现滑动。
    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/property_animator_scroll"
        android:onClick="onClick"
        />

    /* 使用视图动画来实现滑动效果 */
    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_animator_scroll"
        android:onClick="onClick"
        />

    /* 自定义button，用属性动画实现滑动效果，并且使用了延迟滑动 */
    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delayed_scroll"
        android:onClick="onClick"
        />
</LinearLayout>
