<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.demoscroll.PropertyAnimatorScrollActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_property_animator_scroll"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/property_animator_scrollTo"
        android:onClick="onClick"
        />

    <!-- 使用属性动画来实现滑动。属性动画：改变对象的属性，比如位置来实现滑动。-->
    <Button
        android:id="@+id/btn_property_animator"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/property_value_animator_scroll"
        android:onClick="onClick"
        />

    <Button
        android:id="@+id/btn_property_object_animator"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/property_object_animator_scroll"
        android:onClick="onClick"
        />
</LinearLayout>
